fix selectize wrong width

--- a/app/assets/stylesheets/slash_admin/application.scss
+++ b/app/assets/stylesheets/slash_admin/application.scss
@@ -637,7 +637,7 @@ h6 {
     border: 1px solid #c2cad8;
 
     > input {
-      width: 100%;
+      width: 100% !important;
     }
   }
 
